Move content of screen to new file for readability and avoid display several cases at once

--- a/app/components/styles/screen.module.css
+++ b/app/components/styles/screen.module.css
@@ -22,11 +22,3 @@
     scrollbar-width: thin;
     scrollbar-color: #ff000033 #ffa50057
 }
-
-.userTextContainer {
-    text-align: left;
-}
-
-.bold {
-    font-weight: bold;
-}
